--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - images/background.jpg
+   - lib/images/background.jpg
+   - lib/images/WelcomeWindowPlus.png
 
 
 
