--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - lib/images/background.jpg
+   - lib/images/background-landscape.jpg
    - lib/images/WelcomeWindowPlus.png
 
 
