--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dev_dependencies:
   firebase: ^7.3.0
   cloud_firestore: ^0.13.6
   firebase_auth: ^0.16.1
+  provider: ^4.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
