--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  firebase: ^7.3.0
-  cloud_firestore: ^0.13.6
-  firebase_auth: ^0.16.1
+  # firebase: ^7.3.0
+  # cloud_firestore: ^0.13.6
+  # firebase_auth: ^0.16.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -54,6 +54,7 @@ flutter:
    - lib/images/background.jpg
    - lib/images/background-landscape.jpg
    - lib/images/WelcomeWindowPlus.png
+   - lib/images/paintings/painting-1.jpg
 
 
 
