Updated create room

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
    - lib/images/icon7.png
    - lib/images/icon8.png
    - lib/images/icon9.png
+   - lib/images/HorizontalWindow.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
