--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,18 +24,21 @@ dependencies:
   flutter_colorpicker: ^0.3.2
   flutter:
     sdk: flutter
-
+    
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-    firebase: ^7.3.0
-    cloud_firestore: ^0.13.6
-    firebase_auth: ^0.16.1
+  firebase: ^7.3.0
+  cloud_firestore: ^0.13.6
+  firebase_auth: ^0.16.1
+  flutter_svg: ^0.17.3+1
+  http: ^0.12.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
